--- a/style.css
+++ b/style.css
@@ -27,9 +27,11 @@ img {
 }
 .guess {
     display: inline;
-    font-size: 40;
-    width: 150px;
-    height: 150px;
+    border: 2px solid black;
+    border-radius: 25px;
+    font-size: 600%;
+    margin: 100px 10px 100px 10px;
+    padding: 10px 45px 10px 45px;
 }
 #footer {
     width: 100%;
