adjusted input-parent id style to match example

--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ img {
     height: 100px;
 }
 #input-parent {
-    height: 100px;
+    width: 160px;
+    margin: 0 auto 0 auto;
 }
 #headers {
     height: 150px;
