--- a/style.css
+++ b/style.css
@@ -14,22 +14,27 @@ img {
     width: 200px;
     height: 100px;
 }
+#headers {
+    height: 150px;
+}
 #input-parent {
     width: 160px;
     margin: 0 auto 0 auto;
 }
 #player-input {
+    position: fixed;
     width: 160px;
     height: 160px;
+    font-size: 300%;
     border-radius: 100%;
 }
 #submit {
-    width: 80px;
-    height: 80px;
+    position: fixed;
+    top: 20%;
+    left: 45%;
+    width: 70px;
+    height: 70px;
     border-radius: 100%;
-}
-#headers {
-    height: 150px;
 }
 #menu-button {
     display: inline;
