--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ img {
     position: relative;
     width: 160px;
     height: 160px;
+    text-align: center;
     font-size: 300%;
     border-radius: 100%;
 }
@@ -41,6 +42,10 @@ img {
     width: 150px;
     height: 150px;
 }
+#guesses {
+    position: relative;
+    top:70px;
+}
 .guess {
     display: inline;
     border: 2px solid black;
@@ -48,6 +53,10 @@ img {
     font-size: 500%;
     margin: 100px 5px 100px 5px;
     padding: 10px 40px 10px 40px;
+}
+#menu-btns {
+    position: relative;
+    top:120px;
 }
 #footer {
     width: 100%;
